# classic-vibe-mac

./: .gitignore  CONTRIBUTING.md  LEARNINGS.md  LICENSE  NOTICE  PRD.md  README.md  package-lock.json  package.json  playwright.config.ts  playwright.test-demo.config.ts
.claude/agents/: classic-mac-c-developer.md  classic-mac-marketer.md  classic-mac-ui-designer.md  emulator-integration-engineer.md  hfs-disk-image-engineer.md
.github/: dependabot.yml  pull_request_template.md
.github/extensions/cvm-context/: extension.mjs
.github/extensions/cvm-dev-tools/: extension.mjs
.github/extensions/cvm-epic-reviewer/: extension.mjs
.github/extensions/cvm-mac-dev/: extension.mjs
.github/extensions/cvm-planner/: extension.mjs
.github/extensions/cvm-qa-eng/: extension.mjs
.github/extensions/cvm-tech-writer/: extension.mjs
.github/extensions/cvm-ux-designer/: extension.mjs
.github/extensions/cvm-wasm-eng/: extension.mjs
.github/extensions/cvm-web-dev/: extension.mjs
.github/workflows/: build.yml  lint-markdown.yml  test.yml
compile-server/: Dockerfile  README.md  server.py
docs/: AGENT-PROCESS.md  ARCHITECTURE.md  AUDIT-FINDINGS.md  DEVELOPMENT.md  HOW-IT-WORKS.md  NETWORKING.md  PLAYGROUND.md  TROUBLESHOOTING.md
scripts/: audit-wasm-samples.mjs  bake-empty-secondary.sh  build-boot-disk.sh  build-disk-image.sh  build-icon-gallery-rsrc.mjs  build-wasm-rez.sh  capture-deployed-screenshot.mjs  capture-helloworld-screenshot.mjs  capture-html-binding-screenshot.mjs  capture-macweather-screenshot.mjs  capture-playground-phase2-screenshot.mjs  capture-shared-fix-screenshot.mjs  cvm-arkanoid-shot.mjs  cvm-boot-screenshot.mjs  cvm-buildrun-shot.mjs  cvm-gallery-shot.mjs  cvm-glypha-shot.mjs  cvm-screenshot.mjs  fetch-emulator.sh  snapshot-readme-screenshot.mjs  suppress-boot-windows.mjs  vendor-wasm-cc1.mjs  write-chunked-manifest.py
spike/wasm-rez/: .gitignore  README.md  SPIKE-RESULTS.md
spike/wasm-rez/demo/: hello-strn.r  index.html
src/app/: CMakeLists.txt  README.md  game_logic.c  game_logic.h  minesweeper.c  minesweeper.r  reader.c  reader.r
src/app/hello-mac/: CMakeLists.txt  hello.c  hello.r
src/app/macweather/: CMakeLists.txt  macweather.c  macweather.r  weather_glyphs.c  weather_glyphs.h  weather_parse.c  weather_parse.h
src/app/markdownviewer/: CMakeLists.txt  markdown_parse.c  markdown_parse.h  markdownviewer.c  markdownviewer.r
src/app/pixelpad/: CMakeLists.txt  pixelpad.c  pixelpad.r
src/app/reader/: CMakeLists.txt  html_parse.c  html_parse.h  reader.c  reader.r
src/app/wasm-arkanoid/: arkanoid.r  engine.c  engine.h  main.c  render.c
src/app/wasm-bounce/: bounce.c  bounce.r
src/app/wasm-calculator/: calc.c  calc.r
src/app/wasm-clock/: clock.c  clock.r
src/app/wasm-color/: color.c  color.r
src/app/wasm-cursor/: cursor.c  cursor.r
src/app/wasm-debug-console/: console.c  console.r  cvm_log.h
src/app/wasm-dialog/: dialog.c  dialog.r
src/app/wasm-files/: files.c  files.r
src/app/wasm-glypha3/: Externs.h  Prefs.c  Sound.c  Utilities.c  glypha3.r
src/app/wasm-gworld/: gworld.c  gworld.r
src/app/wasm-hello/: hello.c
src/app/wasm-hello-multi/: greet.c  greet.h  main.c
src/app/wasm-hello-window/: hello.c  hello.r
src/app/wasm-icon-gallery/: gallery.c  gallery.h  gallery.r  main.c  render.c
src/app/wasm-multiwin/: multiwin.c  multiwin.r
src/app/wasm-notepad/: notepad.c  notepad.r
src/app/wasm-patterns/: patterns.c  patterns.r
src/app/wasm-scribble/: scribble.c  scribble.r
src/app/wasm-scrollwin/: scrollwin.c  scrollwin.r
src/app/wasm-snake/: snake.c  snake.r
src/app/wasm-sound/: sound.c  sound.r
src/app/wasm-stickynote/: stickynote.c  stickynote.r
src/app/wasm-textedit/: textedit.c  textedit.r
src/app/wasm-wordpad/: wordpad.c  wordpad.r
src/web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/web/public/: emulator-audio-worklet.js
src/web/public/emulator/: NOTICE
src/web/public/playground/: empty-secondary.dsk
src/web/public/precompiled/: VENDORED.md
src/web/public/shared/: README.md  about.html  credits.html  index.html  inside-macintosh.html  lorem.html  weather.json
src/web/public/wasm-cc1/: Elf2Mac.mjs  Elf2Mac.wasm  VENDORED.md  as.mjs  as.wasm  cc1.mjs  ld.mjs  ld.wasm  sysroot-libs.index.json  sysroot.index.json
src/web/public/wasm-rez/: wasm-rez.js  wasm-rez.wasm
src/web/src/: aboutPalette.ts  console-watcher.ts  drawing-watcher.ts  emulator-config.ts  emulator-input.ts  emulator-loader.ts  emulator-worker-types.ts  emulator-worker.ts  ethernet-provider.ts  ethernet.ts  helpPalette.ts  idePanes.ts  main.ts  menubarMenus.ts  preferencesPalette.ts  projectPicker.ts  settings.ts  shared-poller.ts  style.css  weather-poller.ts  winboxChrome.ts  zipImport.ts
src/web/src/playground/: asm-palette.ts  build-explainer.ts  build.ts  buildProgressWindow.ts  cc1.ts  compile-client.ts  editor.ts  error-markers.ts  fetchStats.ts  floppy-icon.ts  hfs-patcher.ts  lang-m68k.ts  lang-rez.ts  persistence.ts  rez.ts  (+8 more)
tests/: README.md  tsconfig.json
tests/e2e/: pause-when-hidden.spec.ts  placeholder.spec.ts  playground-buildrun.spec.ts  playground-compile-to-bin.spec.ts  playground-find-replace.spec.ts  playground-reset-button.spec.ts  playground-show-asm.spec.ts  playground-size-splice.spec.ts  playground-toolbox-reference.spec.ts  playground-toolchain-registry.spec.ts  playground-wasm-hello-build.spec.ts  prebuilt-demo-boot.spec.ts
tests/unit/: Makefile  hfs-patcher.test.mjs  preprocessor.test.mjs  shared-poller.test.mjs  test_html_parse.c  test_md_parse.c  test_minesweeper.c  test_weather_parse.c
tests/visual/: placeholder-vision.spec.ts  playwright.config.ts  vision-assert.ts
tools/: README.md  test-demo.sh
tools/m68k-runner/: README.md  runner.c
tools/m68k-runner/musashi/: m68kconf.h
tools/wasm-rez/: .gitignore  CMakeLists.txt  README.md
wireframes/mac-os-8-ide/: README.md  index.html  wireframe.css
worker/: ethernet-zone.ts  wrangler.toml
(+8 files in other folders)
